--- a/experience.css
+++ b/experience.css
@@ -9,6 +9,11 @@ body {
     margin-top: 30px;
     text-align: center;
 }
+
+#space {
+margin-top: 40px;
+}
+
 .line {
     padding-left : 15%;
     padding-right: 15%;
